name: 		        VHDL
version:	        0.0
author:		        Matthias Brettschneider
maintainer:	        frosch03@gmail.com
homepage:           http://github.com/frosch03
description:	    Using Arrows to describe Hardware and to generate VHDL code
license:	        BSD3
category:           Testing
cabal-version:	    >=1.2
build-type:	        Simple

ibrary
  build-depends:    base > 3
  exposed-modules:  Circuit
                    Circuit.Arrow
                    Circuit.Auxillary
                    Circuit.Descriptor
                    Circuit.Defaults

Executable Beispiel
    main-is:        Beispiel.hs
    other-modules:  Circuit
                    Circuit.Arrow
                    Circuit.Auxillary
                    Circuit.Descriptor
                    Circuit.Defaults 
